Bug 160104 - Closing the solver dialog marks the file as modified even if nothing is changed
Summary: Closing the solver dialog marks the file as modified even if nothing is changed
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
24.8.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Rafael Lima
URL:
Whiteboard: target:24.8.0
Keywords:
Depends on:
Blocks: Solver
  Show dependency treegraph
 
Reported: 2024-03-08 21:28 UTC by Rafael Lima
Modified: 2024-03-20 11:35 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Rafael Lima 2024-03-08 21:28:12 UTC
Simply opening and closing the Solver dialog without changing anything will mark the file as modified.

Steps to reproduce
1) Open attachment 189033 [details] from bug 156814
2) Go to Tools - Solver
3) Click "Close" without changing anything
4) Notice that the file is marked as modified

Expected results:
If nothing changed in the dialog, then the file should not be marked as modified

System info

Version: 24.2.1.2 (X86_64) / LibreOffice Community
Build ID: 420(Build:2)
CPU threads: 16; OS: Linux 6.5; UI render: default; VCL: kf5 (cairo+xcb)
Locale: pt-BR (pt_BR.UTF-8); UI: en-US
Ubuntu package version: 4:24.2.1~rc2-0ubuntu0.23.10.1~lo1
Calc: threaded
Comment 1 Rafael Lima 2024-03-13 14:05:10 UTC
Proposed patch here
https://gerrit.libreoffice.org/c/core/+/164616
Comment 2 Commit Notification 2024-03-20 10:16:45 UTC
Rafael Lima committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/6c97cd3691ea0f7d9e580b1c4ea0fca81d47758a

tdf#160104 Do not mark file as modified if nothing changed in the Solver dialog

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.