tdf#160104 Do not mark file as modified if nothing changed in the Solver dialog

Change-Id: I1bef38a21179bb725c7fb7a08fe90309d26239ee
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/164616
Tested-by: Jenkins
Reviewed-by: Tomaž Vajngerl <quikee@gmail.com>